...

    Column(modifier = Modifier.widthIn(min = FattoMetrics.dateControlMinWidth), horizontalAlignment = Alignment.CenterHorizontally) {
        Box {
            IconButton(onClick = { expanded = true }, modifier = Modifier.size(FattoMetrics.dateControlMinWidth)) {
                Icon(
                    imageVector = Icons.Outlined.Flag,
                    contentDescription = "Set Priority",
                    modifier = Modifier.size(FattoMetrics.dateControlIcon),
                    tint =
                        if (priority != null) {
                            MaterialTheme.colorScheme.primary
                        } else {
                            MaterialTheme.colorScheme.onSurfaceVariant
...
            }
            DropdownMenu(
                expanded = expanded,
                onDismissRequest = { expanded = false },
            ) {
                DropdownMenuItem(
                    text = { Text("High") },
                    modifier = Modifier.semantics { selected = priority == "H" },
                    trailingIcon = {
                        if (priority == "H") {
                            Icon(
                                Icons.Default.Check,
                                contentDescription = null,
...
